src/deps/imgui/ext/implot/c/cimplot.h

typedef struct ImPlotLimits ImPlotLimits;
typedef struct ImPlotRange ImPlotRange;
typedef struct ImPlotPoint ImPlotPoint;
struct ImPlotPoint
{
    double x, y;
};
struct ImPlotRange
{
    double Min, Max;
};
struct ImPlotLimits
{
    ImPlotRange X, Y;
};
CIMGUI_API void ImPlot_PlotStairsG(const char* label_id,ImPlotPoint(*getter)(void* data,int idx),void* data,int count);
CIMGUI_API void ImPlot_PlotStems_S32PtrS32Ptr(const char* label_id,const ImS32* xs,const ImS32* ys,int count,double y_ref,int offset,int stride);
CIMGUI_API void ImPlot_PlotStems_U32PtrU32Ptr(const char* label_id,const ImU32* xs,const ImU32* ys,int count,double y_ref,int offset,int stride);
CIMGUI_API void ImPlot_PlotStems_S64PtrS64Ptr(const char* label_id,const ImS64* xs,const ImS64* ys,int count,double y_ref,int offset,int stride);
CIMGUI_API void ImPlot_PlotStems_U64PtrU64Ptr(const char* label_id,const ImU64* xs,const ImU64* ys,int count,double y_ref,int offset,int stride);
CIMGUI_API void ImPlot_PlotVLines_FloatPtr(const char* label_id,const float* xs,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotVLines_doublePtr(const char* label_id,const double* xs,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotVLines_S8Ptr(const char* label_id,const ImS8* xs,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotVLines_U8Ptr(const char* label_id,const ImU8* xs,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotVLines_S16Ptr(const char* label_id,const ImS16* xs,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotVLines_U16Ptr(const char* label_id,const ImU16* xs,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotVLines_S32Ptr(const char* label_id,const ImS32* xs,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotVLines_U32Ptr(const char* label_id,const ImU32* xs,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotVLines_S64Ptr(const char* label_id,const ImS64* xs,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotVLines_U64Ptr(const char* label_id,const ImU64* xs,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotHLines_FloatPtr(const char* label_id,const float* ys,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotHLines_doublePtr(const char* label_id,const double* ys,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotHLines_S8Ptr(const char* label_id,const ImS8* ys,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotHLines_U8Ptr(const char* label_id,const ImU8* ys,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotHLines_S16Ptr(const char* label_id,const ImS16* ys,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotHLines_U16Ptr(const char* label_id,const ImU16* ys,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotHLines_S32Ptr(const char* label_id,const ImS32* ys,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotHLines_U32Ptr(const char* label_id,const ImU32* ys,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotHLines_S64Ptr(const char* label_id,const ImS64* ys,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotHLines_U64Ptr(const char* label_id,const ImU64* ys,int count,int offset,int stride);
CIMGUI_API void ImPlot_PlotPieChart_FloatPtr(const char* const label_ids[],const float* values,int count,double x,double y,double radius,bool normalize,const char* label_fmt,double angle0);
CIMGUI_API void ImPlot_PlotPieChart_doublePtr(const char* const label_ids[],const double* values,int count,double x,double y,double radius,bool normalize,const char* label_fmt,double angle0);
CIMGUI_API void ImPlot_PlotPieChart_S8Ptr(const char* const label_ids[],const ImS8* values,int count,double x,double y,double radius,bool normalize,const char* label_fmt,double angle0);
CIMGUI_API void ImPlot_PlotPieChart_U8Ptr(const char* const label_ids[],const ImU8* values,int count,double x,double y,double radius,bool normalize,const char* label_fmt,double angle0);
CIMGUI_API void ImPlot_PlotPieChart_S16Ptr(const char* const label_ids[],const ImS16* values,int count,double x,double y,double radius,bool normalize,const char* label_fmt,double angle0);
CIMGUI_API void ImPlot_PlotPieChart_U16Ptr(const char* const label_ids[],const ImU16* values,int count,double x,double y,double radius,bool normalize,const char* label_fmt,double angle0);
CIMGUI_API void ImPlot_PlotPieChart_S32Ptr(const char* const label_ids[],const ImS32* values,int count,double x,double y,double radius,bool normalize,const char* label_fmt,double angle0);
CIMGUI_API void ImPlot_PlotPieChart_U32Ptr(const char* const label_ids[],const ImU32* values,int count,double x,double y,double radius,bool normalize,const char* label_fmt,double angle0);
CIMGUI_API void ImPlot_PlotPieChart_S64Ptr(const char* const label_ids[],const ImS64* values,int count,double x,double y,double radius,bool normalize,const char* label_fmt,double angle0);
CIMGUI_API void ImPlot_PlotPieChart_U64Ptr(const char* const label_ids[],const ImU64* values,int count,double x,double y,double radius,bool normalize,const char* label_fmt,double angle0);
CIMGUI_API void ImPlot_PlotHeatmap_FloatPtr(const char* label_id,const float* values,int rows,int cols,double scale_min,double scale_max,const char* label_fmt,const ImPlotPoint bounds_min,const ImPlotPoint bounds_max);
CIMGUI_API void ImPlot_PlotHeatmap_doublePtr(const char* label_id,const double* values,int rows,int cols,double scale_min,double scale_max,const char* label_fmt,const ImPlotPoint bounds_min,const ImPlotPoint bounds_max);
CIMGUI_API void ImPlot_PlotHeatmap_S8Ptr(const char* label_id,const ImS8* values,int rows,int cols,double scale_min,double scale_max,const char* label_fmt,const ImPlotPoint bounds_min,const ImPlotPoint bounds_max);
CIMGUI_API void ImPlot_PlotHeatmap_U8Ptr(const char* label_id,const ImU8* values,int rows,int cols,double scale_min,double scale_max,const char* label_fmt,const ImPlotPoint bounds_min,const ImPlotPoint bounds_max);
CIMGUI_API void ImPlot_PlotHeatmap_S16Ptr(const char* label_id,const ImS16* values,int rows,int cols,double scale_min,double scale_max,const char* label_fmt,const ImPlotPoint bounds_min,const ImPlotPoint bounds_max);
CIMGUI_API void ImPlot_PlotHeatmap_U16Ptr(const char* label_id,const ImU16* values,int rows,int cols,double scale_min,double scale_max,const char* label_fmt,const ImPlotPoint bounds_min,const ImPlotPoint bounds_max);
CIMGUI_API void ImPlot_PlotHeatmap_S32Ptr(const char* label_id,const ImS32* values,int rows,int cols,double scale_min,double scale_max,const char* label_fmt,const ImPlotPoint bounds_min,const ImPlotPoint bounds_max);
CIMGUI_API void ImPlot_PlotHeatmap_U32Ptr(const char* label_id,const ImU32* values,int rows,int cols,double scale_min,double scale_max,const char* label_fmt,const ImPlotPoint bounds_min,const ImPlotPoint bounds_max);
CIMGUI_API void ImPlot_PlotHeatmap_S64Ptr(const char* label_id,const ImS64* values,int rows,int cols,double scale_min,double scale_max,const char* label_fmt,const ImPlotPoint bounds_min,const ImPlotPoint bounds_max);
CIMGUI_API void ImPlot_PlotHeatmap_U64Ptr(const char* label_id,const ImU64* values,int rows,int cols,double scale_min,double scale_max,const char* label_fmt,const ImPlotPoint bounds_min,const ImPlotPoint bounds_max);
CIMGUI_API double ImPlot_PlotHistogram_FloatPtr(const char* label_id,const float* values,int count,int bins,bool cumulative,bool density,ImPlotRange range,bool outliers,double bar_scale);
CIMGUI_API double ImPlot_PlotHistogram_doublePtr(const char* label_id,const double* values,int count,int bins,bool cumulative,bool density,ImPlotRange range,bool outliers,double bar_scale);
CIMGUI_API double ImPlot_PlotHistogram_S8Ptr(const char* label_id,const ImS8* values,int count,int bins,bool cumulative,bool density,ImPlotRange range,bool outliers,double bar_scale);
CIMGUI_API double ImPlot_PlotHistogram_U8Ptr(const char* label_id,const ImU8* values,int count,int bins,bool cumulative,bool density,ImPlotRange range,bool outliers,double bar_scale);
CIMGUI_API double ImPlot_PlotHistogram_S16Ptr(const char* label_id,const ImS16* values,int count,int bins,bool cumulative,bool density,ImPlotRange range,bool outliers,double bar_scale);
CIMGUI_API double ImPlot_PlotHistogram_U16Ptr(const char* label_id,const ImU16* values,int count,int bins,bool cumulative,bool density,ImPlotRange range,bool outliers,double bar_scale);
CIMGUI_API double ImPlot_PlotHistogram_S32Ptr(const char* label_id,const ImS32* values,int count,int bins,bool cumulative,bool density,ImPlotRange range,bool outliers,double bar_scale);
CIMGUI_API double ImPlot_PlotHistogram_U32Ptr(const char* label_id,const ImU32* values,int count,int bins,bool cumulative,bool density,ImPlotRange range,bool outliers,double bar_scale);
CIMGUI_API double ImPlot_PlotHistogram_S64Ptr(const char* label_id,const ImS64* values,int count,int bins,bool cumulative,bool density,ImPlotRange range,bool outliers,double bar_scale);
CIMGUI_API double ImPlot_PlotHistogram_U64Ptr(const char* label_id,const ImU64* values,int count,int bins,bool cumulative,bool density,ImPlotRange range,bool outliers,double bar_scale);
CIMGUI_API double ImPlot_PlotHistogram2D_FloatPtr(const char* label_id,const float* xs,const float* ys,int count,int x_bins,int y_bins,bool density,ImPlotLimits range,bool outliers);
CIMGUI_API double ImPlot_PlotHistogram2D_doublePtr(const char* label_id,const double* xs,const double* ys,int count,int x_bins,int y_bins,bool density,ImPlotLimits range,bool outliers);
CIMGUI_API double ImPlot_PlotHistogram2D_S8Ptr(const char* label_id,const ImS8* xs,const ImS8* ys,int count,int x_bins,int y_bins,bool density,ImPlotLimits range,bool outliers);
CIMGUI_API double ImPlot_PlotHistogram2D_U8Ptr(const char* label_id,const ImU8* xs,const ImU8* ys,int count,int x_bins,int y_bins,bool density,ImPlotLimits range,bool outliers);
CIMGUI_API double ImPlot_PlotHistogram2D_S16Ptr(const char* label_id,const ImS16* xs,const ImS16* ys,int count,int x_bins,int y_bins,bool density,ImPlotLimits range,bool outliers);
CIMGUI_API double ImPlot_PlotHistogram2D_U16Ptr(const char* label_id,const ImU16* xs,const ImU16* ys,int count,int x_bins,int y_bins,bool density,ImPlotLimits range,bool outliers);
CIMGUI_API double ImPlot_PlotHistogram2D_S32Ptr(const char* label_id,const ImS32* xs,const ImS32* ys,int count,int x_bins,int y_bins,bool density,ImPlotLimits range,bool outliers);
CIMGUI_API double ImPlot_PlotHistogram2D_U32Ptr(const char* label_id,const ImU32* xs,const ImU32* ys,int count,int x_bins,int y_bins,bool density,ImPlotLimits range,bool outliers);